The table UI can now set boolean values to false - it was not coming in the parameters from the browser so it was ignored